fix: z-index issue with budget options

--- a/client/src/assets/styles/transactionoptions.css
+++ b/client/src/assets/styles/transactionoptions.css
@@ -10,6 +10,7 @@
   position: absolute;
   right: 2.75rem;
   background-color: var(--white);
+  z-index: 95;
 }
 
 .options {
